fixing navbar overflow

--- a/my-personal-website/src/components/Navbar.css
+++ b/my-personal-website/src/components/Navbar.css
@@ -1,6 +1,5 @@
 .nav_bar{
     position: fixed;
-  
     display: flex;
     justify-content: space-between;
     flex-direction: row;
@@ -8,7 +7,7 @@
     width: 100%;
     height: 10vh;
   
-    font-size: 30px;
+    font-size: 2vw; /* or other relative units */
     font-family: 'Itim';
     color: white;
     background-color: #0d1821;
